--- a/particles.html
+++ b/particles.html
@@ -10,6 +10,6 @@
   <body>
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./particles.js"></script>
   </body>
 </html>
